Migrate to java module system.
Encountered challenges:
- Modules had to be in different packages
- org.kohsuke.metainf-services was not compatible with modules (automatic module)
- compile-testing doesn't seem to honor module path. Didn't find module under test, then didn't find  template.java (from resources in subpath/package)
- Compilation of main module failed because of empty package. Generated class was not enough.
- Filer now requires fully qualified name